[workspace]

members = [
    "erc1155",
    "erc1155-crate",
    "erc1155-session-code",
    "erc1155-tests",
    "common",
    #Mock Contract
    "mock-contract/mock-contract",
    "mock-contract/mock-contract-crate",
    "mock-contract/mock-contract-tests",
]

[profile.release]
codegen-units = 1
lto = true