[package]
name = "erc1155_crate"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.4"
casper-types = "= 1.5.0"
contract-utils = { path = "../utils/contract-utils" }

casper_types_derive = "= 0.1.0"
hex = { version = "0.4.3", default-features = false }
renvm-sig = "0.1.1"
cryptoxide = "0.3.3"

