[package]
authors = ["Nouman Nadeem <nouman.nadeem.zafar@scytalelabs.com>"]
edition = "2018"
name = "mock-contract"
version = "0.1.0"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.1.0"
mock-contract-crate = { path = "../mock-contract-crate" }
erc1155-crate = { path = "../../erc1155-crate" }

cryptoxide = "0.3.3"
hex = { version = "0.4.3", default-features = false }
renvm-sig = "0.1.1"

[[bin]]
bench = false
doctest = false
name = "mock-contract"
path = "bin/mock_contract.rs"
test = false

[features]
default = ["casper-contract/std", "casper-types/std"]
